--- a/LED_Blink/LED_Blink.ioc
+++ b/LED_Blink/LED_Blink.ioc
@@ -46,7 +46,7 @@ RCC.FamilyName=M
 RCC.MCO1PinFreq_Value=16000000
 ProjectManager.StackSize=0x400
 PA5.Locked=true
-PA5.GPIO_Label=Green_LED
+PA5.GPIO_Label=LD2[Green LED]
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 RCC.APBFreq_Value=16000000
@@ -57,8 +57,8 @@ ProjectManager.ToolChainLocation=
 RCC.LSI_VALUE=32000
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 Mcu.IP0=NVIC
-RCC.LSCOPinFreq_Value=32000
 Mcu.IP1=RCC
+RCC.LSCOPinFreq_Value=32000
 ProjectManager.HeapSize=0x200
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA5.GPIOParameters=GPIO_Label
