--- a/LED_Blink_for_F407/LED_Blink_for_F407.ioc
+++ b/LED_Blink_for_F407/LED_Blink_for_F407.ioc
@@ -5,11 +5,11 @@ ProjectManager.ProjectFileName=LED_Blink_for_F407.ioc
 RCC.CortexFreq_Value=50000000
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F407VGTx
-Mcu.PinsNb=5
+Mcu.PinsNb=6
 ProjectManager.NoMain=false
 RCC.PLLCLKFreq_Value=50000000
 RCC.PLLQCLKFreq_Value=25000000
-ProjectManager.functionlistsort=2-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
 RCC.RTCFreq_Value=32000
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -36,18 +36,20 @@ RCC.VcooutputI2S=192000000
 ProjectManager.RegisterCallBack=
 RCC.LSE_VALUE=32768
 RCC.AHBFreq_Value=50000000
-Mcu.Pin0=PA5
-Mcu.Pin1=PA13
-Mcu.Pin2=PA14
-Mcu.Pin3=PB3
-Mcu.Pin4=VP_SYS_VS_Systick
+Mcu.Pin0=PA4
+Mcu.Pin1=PA5
+Mcu.Pin2=PA13
+Mcu.Pin3=PA14
+Mcu.Pin4=PB3
 RCC.VCOI2SOutputFreq_Value=384000000
+Mcu.Pin5=VP_SYS_VS_Systick
 PA5.Signal=GPIO_Output
 ProjectManager.ProjectBuild=false
 RCC.HSE_VALUE=25000000
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 board=custom
+PA4.Locked=true
 RCC.VCOOutputFreq_Value=100000000
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 ProjectManager.LastFirmware=true
@@ -61,6 +63,7 @@ File.Version=6
 VP_SYS_VS_Systick.Mode=SysTick
 RCC.EthernetFreq_Value=50000000
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA4.GPIOParameters=GPIO_Label
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.FreePins=false
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
@@ -71,9 +74,10 @@ RCC.RTCHSEDivFreq_Value=12500000
 ProjectManager.ProjectName=LED_Blink_for_F407
 ProjectManager.UnderRoot=true
 ProjectManager.CoupleFile=false
-RCC.MCO2PinFreq_Value=50000000
 RCC.48MHZClocksFreq_Value=25000000
+RCC.MCO2PinFreq_Value=50000000
 PB3.Signal=SYS_JTDO-SWO
+PA4.Signal=GPIO_Output
 RCC.SYSCLKFreq_VALUE=50000000
 Mcu.Package=LQFP100
 PA5.Locked=true
@@ -100,6 +104,7 @@ RCC.PLLN=50
 RCC.APB1TimFreq_Value=50000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 RCC.APB1Freq_Value=25000000
+PA4.GPIO_Label=LED1
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DeviceId=STM32F407VGTx
 ProjectManager.LibraryCopy=1
